--- a/src/list.css
+++ b/src/list.css
@@ -11,6 +11,18 @@
     border-radius: 8px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    display: flex;
+
+}
+
+.accordion-button {
+    flex: 0.2;
+    margin-left: 8px;
+    min-width: 120px;
+    font-size: 0.75rem;
+    padding: 4px 8px;
+    background-color: #0f2d54;
+    color: #ffffff;
 }
 
 .mui-accordion-summary {
@@ -18,6 +30,7 @@
     font-weight: 500;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 12px 24px;
 }
 
@@ -34,6 +47,9 @@
 .atc-info {
     font-size: 0.9rem;
     color: #5f738c;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .mui-accordion-details {
@@ -76,7 +92,7 @@
     display: flex;
     justify-content: space-between;
     color: #333;
-    background-color: #e7e6dc;
+    background-color: #ffffff;
 
 }
 
